<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grabbr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_background_desc">Login background</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_fb_login_button_text">Login With Facebook</string>
    <string name="login_new_account_button">Create New Account</string>
    <string name="grabbr_image">Grabbr Image</string>
    <string name="title_activity_signup">Signup</string>
    <string name="signup_circle_text">Photo</string>
    <string name="signup_cancel_btn_text">Cancel</string>
    <string name="signup_done_btn_text">Done</string>
    <string name="signup_phoneno_edittext">Mobile Number</string>
    <string name="signup_email_edittext_hint">Email</string>
    <string name="signup_password_edittext_hint">Password</string>
    <string name="signup_done_button_toast">You are successfully registered</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="confirmation_enter_text_code">Enter Validation Code</string>
    <string name="confirmation_getting_text_shortly_text">You should be getting a message shortly</string>
    <string name="confirmation_soon_you_will_get_message">Soon you will get message</string>
    <string name="title_activity_confirmation_done">Successful</string>
    <string name="confirmationdone_name_textview">Dinesh Sunny</string>

</resources>
