<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.dineshsunny.grabbr.MainActivity" 
    android:id="@+id/parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/padding_for_all"
        android:layout_marginRight="@dimen/padding_for_all"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/grabbr_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="61dp"
            android:contentDescription="@string/grabbr_image"
            android:src="@drawable/grabbr_image" 
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/login_username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text=""
            android:hint="@string/login_username_hint"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
        
        <EditText
            android:id="@+id/login_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

          <Button
            android:id="@+id/login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        
            android:layout_marginTop="25dp"
            android:text="@string/login_button_text"
            android:textColor="@android:color/white"
            android:background="@drawable/button_border" />

        <Button
            android:id="@+id/login_facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:background="@android:color/white"
            android:text="@string/login_fb_login_button_text"
            android:textColor="@color/indigo" />
        
        <Button
            android:id="@+id/login_new_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/white"
            android:text="@string/login_new_account_button"
            android:textColor="@color/indigo"
             />
    </LinearLayout>

</RelativeLayout>